--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,7 @@ version: "3"
 services:
   test:
     image: alpine
-    entrypoint:
-      [
-        "/bin/sh",
-        "-c",
-        "echo",
-        "$HOSTNAME",
-        "&&",
-        "sleep",
-        "1000"
-      ]
+    command:
+      - /bin/ash
+      - -c
+      - 'echo $$HOSTNAME && sleep 1000'
